# qt-webitemview

./: CMakeLists.txt  README.md  WebItemDelegate.cpp  WebItemDelegate.h  main.cpp  testwebitemview.cpp  testwebitemview.h  web-itemview.pro
examples/: CMakeLists.txt  filesystem.cpp  filesystem.h  simplelistview.cpp
src/: CMakeLists.txt  WebItemDelegate.cpp  WebItemDelegate.h
